--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Delivery</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -12,11 +12,88 @@
 
 <body>
 
-<div class="content">
+<header>
+  <nav>
+    <h4>Deliver</h4>
+    <ul>
+      <li>How it works</li>
+      <li>Pricing</li>
+      <li>Contact</li>
+    </ul>
+    <ul>
+      <li>Signin</li>
+      <li>Signup</li>
+      <li>
+        <img src="" alt="fleche">
+      </li>
+    </ul>
+  </nav>
+  <img src="" alt="">
+  <h1>Package Delivery</h1>
+  <h5>We deliver any package in your city</h5>
+  <section>
+    <input type="text" name="" value="" placeholder="Enter your product url">
+    <button type="button" name="button">fleche</button>
+  </section>
+</header>
 
-</div>
+<section>
+  <h2>About Deliver</h2>
+  <h5>WHY WE BEST</h5>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+</section>
 
+<section>
+  <h2>The most fastest delivery</h2>
+  <h5>FAST AND FASTER</h5>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  <button type="button" name="button">GET STARTED</button>
+</section>
 
+<section>
+  <h2>We delivering package any of your nearest city</h2>
+  <h5>ANY CITY FOR YOU</h5>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  <button type="button" name="button">GET STARTED</button>
+</section>
+
+<section>
+  <h3>Ready to get started?</h3>
+  <p>Ports like Hong Kong, Alaska, Norway and Amazon River</p>
+  <button type="button" name="button">GET STARTED</button>
+</section>
+
+<section>
+  <h2>Our support center 24/7 open</h2>
+  <h5>ALWAYS OPEN</h5>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  <button type="button" name="button">GET STARTED</button>
+</section>
+
+<footer>
+  <section>
+    <h4>DELIVER</h4>
+    <ul>
+      <li>Home</li>
+      <li>Blog</li>
+      <li>Contact</li>
+      <li>About Us</li>
+    </ul>
+    <ul>
+      <li><a href=""></a>icone</li>
+      <li><a href=""></a>icone</li>
+      <li><a href=""></a>icone</li>
+    </ul>
+  </section>
+  <section>
+    <p>&copy; 2018 Surja Sen Das Raj, All Rights Reserved</p>
+    <p>TERM OF SERVICE</p>
+  </section>
+</footer>
 
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
