creation some rules for section and article

--- a/index.html
+++ b/index.html
@@ -36,44 +36,57 @@
     <button type="button" name="button">fleche</button>
   </section>
 </header>
+<main>
+    <section class="left">
+        <article class="art">
+          <h2>About Deliver</h2>
+          <h5>WHY WE BEST</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        </section>
+    </article>
 
-<section>
-  <h2>About Deliver</h2>
-  <h5>WHY WE BEST</h5>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-</section>
+    <section class="right">
+        <article class="art">
 
-<section>
-  <h2>The most fastest delivery</h2>
-  <h5>FAST AND FASTER</h5>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-  <button type="button" name="button">GET STARTED</button>
-</section>
+              <h2>The most fastest delivery</h2>
+              <h5>FAST AND FASTER</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <button type="button" name="button">GET STARTED</button>
+          </article>
+        </section>
 
-<section>
-  <h2>We delivering package any of your nearest city</h2>
-  <h5>ANY CITY FOR YOU</h5>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-  <button type="button" name="button">GET STARTED</button>
-</section>
+    <section class="left">
+        <article class="art">
 
-<section>
-  <h3>Ready to get started?</h3>
-  <p>Ports like Hong Kong, Alaska, Norway and Amazon River</p>
-  <button type="button" name="button">GET STARTED</button>
-</section>
+          <h2>We delivering package any of your nearest city</h2>
+          <h5>ANY CITY FOR YOU</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <button type="button" name="button">GET STARTED</button>
+      </article>
+    </section>
 
-<section>
-  <h2>Our support center 24/7 open</h2>
-  <h5>ALWAYS OPEN</h5>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-  <button type="button" name="button">GET STARTED</button>
-</section>
+    <section class="center shadow">
+        <article class="">
+          <h3>Ready to get started?</h3>
+          <p>Ports like Hong Kong, Alaska, Norway and Amazon River</p>
+          <button type="button" name="button">GET STARTED</button>
+      </article>
+    </section>
 
+    <section class="right">
+        <article class="art">
+          <h2>Our support center 24/7 open</h2>
+          <h5>ALWAYS OPEN</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <button type="button" name="button">GET STARTED</button>
+      </article>
+    </section>
+
+</main>
 <footer>
   <section>
     <h4>DELIVER</h4>
