--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
       </li>
     </ul>
   </nav>
-  <img src="" alt="">
+
+  <img class="img_titre shadow" src="http://via.placeholder.com/150x150" alt="">
   <h1>Package Delivery</h1>
-  <h5>We deliver any package in your city</h5>
-  <section>
+  <h6>We deliver any package in your city</h6>
+
+  <section class="center">
     <input type="text" name="" value="" placeholder="Enter your product url">
     <button type="button" name="button">fleche</button>
   </section>
+
 </header>
 <main>
     <section class="left">
@@ -43,8 +46,8 @@
           <h5>WHY WE BEST</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        </section>
-    </article>
+        </article>
+      </section>
 
     <section class="right">
         <article class="art">
