modif button with mixin

--- a/index.html
+++ b/index.html
@@ -71,13 +71,16 @@
       </article>
     </section>
 
-    <section class="center shadow">
-        <article class="">
-          <h3>Ready to get started?</h3>
-          <p>Ports like Hong Kong, Alaska, Norway and Amazon River</p>
+
+        <article class="center shadow">
+            <div>
+
+              <h3>Ready to get started?</h3>
+              <p>Ports like Hong Kong, Alaska, Norway and Amazon River</p>
+          </div>
           <button type="button" name="button">GET STARTED</button>
       </article>
-    </section>
+
 
     <section class="right">
         <article class="art">
@@ -85,6 +88,7 @@
           <h5>ALWAYS OPEN</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis blanditiis nam delectus illum laudantium velit modi maiores tempore quae culpa, earum, hic eveniet dolore eum reprehenderit! Delectus culpa vitae expedita!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
           <button type="button" name="button">GET STARTED</button>
       </article>
     </section>
